# brokkr

./: .gitignore  .review.toml  CLAUDE.md  CLI-REDESIGN.md  CODE_QUALITY_REVIEW_2026-03-01.md  Cargo.toml  IMPLEMENTATION_ROADMAP_2026-03-01.md  README.md  REVIEW.md  SCHEMA_REDESIGN.md  SWEEP-3.md  TIERED-CHECK.md  TODO.md  brokkr.toml  build.rs
docs/: brokkr.toml.datasets.md  brokkr.toml.md  brokkr.toml.piners.md
docs/commands/: check.md  clippy.md  corpus.md  deps.md  lint-corpus.md  measure.md  output-channels.md  ratatoskr-gate.md  service.md  sync.md  visual.md
docs/projects/: elivagar.md  litehtml.md  nidhogg.md  pbfhogg-vs-elivagar.md  pbfhogg.md  piners.md  ratatoskr.md
notes/: check-test-review.md  deps.md  ratatoskr-mock-server.md  ratatoskr-service-harness.md  ratatoskr-sync-orchestration.md  sidecar-mvp.md  sidecar-protocol-v2.md  sidecar.md  test-watchdog.md
scratch/: extract_cargo_tree.py
scripts/: smoke-certifies.sh
scripts/litehtml-prepare/: package.json  pnpm-lock.yaml  prepare.js
src/: artefacts.rs  build.rs  cargo_filter.rs  cargo_json.rs  check_cmd.rs  cli.rs  config.rs  context.rs  db.rs  dependency_rules.rs  dispatch.rs  env.rs  error.rs  git.rs  globs.rs  gremlins.rs  harness.rs  header.rs  history.rs  history_cmd.rs  hotpath_fmt.rs  invalidate_cmd.rs  lex.rs  lockfile.rs  main.rs  man.rs  manifest.rs  measure.rs  oom.rs  osc.rs  output.rs  pmtiles.rs  preflight.rs  preview.rs  profile.rs  profiler.rs  project.rs  request.rs  resolve.rs  results_cmd.rs  (+14 more)
src/check_cmd/: binaries.rs  coverage.rs  isolate.rs  output.rs  phase.rs
src/db/: mod.rs  (+10 more)
(+148 files in other folders)
