[package]
name = "brokkr"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Shared development tooling for pbfhogg, elivagar, and nidhogg"

[[bin]]
name = "brokkr"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
toml = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
rusqlite = { version = "0.39", features = ["bundled"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
png = "0.18"

[lints.clippy]
uninlined_format_args = "deny"
cloned_instead_of_copied = "deny"
redundant_closure_for_method_calls = "deny"
semicolon_if_nothing_returned = "deny"
manual_string_new = "deny"
explicit_iter_loop = "deny"
implicit_clone = "deny"
needless_pass_by_value = "deny"
unnecessary_sort_by = "deny"
collapsible_match = "deny"
if_same_then_else = "deny"
needless_borrow = "deny"
ptr_arg = "deny"
redundant_locals = "deny"
regex_creation_in_loops = "deny"
unnecessary_unwrap = "deny"
wrong_self_convention = "deny"
let_underscore_must_use = "deny"
unwrap_in_result = "deny"
ok_expect = "deny"
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"
too_many_arguments = "deny"
large_enum_variant = "deny"
clone_on_ref_ptr = "deny"
float_cmp = "deny"
cognitive_complexity = "deny"
cast_sign_loss = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
unwrap_used = "deny"
too_many_lines = "deny"
